--- a/index.html
+++ b/index.html
@@ -11,12 +11,129 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
-  <body class="bg-slate-600">
-    <header class="">
-      <div>
+  <body class="bg-slate-600 text-white">
+    <header class="header">
+      <!-- <div>
         <img class="w-full" src="/assets/cover-1.png" alt="" />
-      </div>
+      </div> -->
+      <h1 class="text-5xl font-bold text-center">
+        Now Your Term, Choose yours
+      </h1>
     </header>
+    <main>
+      <section class="grid grid-cols-3 gap-8 w-10/12 mx-auto mt-16">
+        <div class="bg-red-500 col-span-2">
+          <div id="card-div" class="grid grid-cols-3 gap-4 p-2">
+            <!-- card-1 start -->
+            <div class="card w-full bg-base-100 shadow-xl">
+              <figure class="px-3 py-3">
+                <img src="/assets/cover-1.png" alt="Shoes" class="" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">Shoes!</h2>
+                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <div class="card-actions">
+                  <button class="btn btn-primary">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- card-1 End -->
+            <!-- card-2 start -->
+            <div class="card w-full bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <img
+                  src="https://placeimg.com/400/225/arch"
+                  alt="Shoes"
+                  class="rounded-xl"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">Shoes!</h2>
+                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <div class="card-actions">
+                  <button class="btn btn-primary">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- card-2 End -->
+            <!-- card-3 start -->
+            <div class="card w-full bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <img
+                  src="https://placeimg.com/400/225/arch"
+                  alt="Shoes"
+                  class="rounded-xl"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">Shoes!</h2>
+                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <div class="card-actions">
+                  <button class="btn btn-primary">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- card-3 End -->
+            <!-- card-4 start -->
+            <div class="card w-full bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <img
+                  src="https://placeimg.com/400/225/arch"
+                  alt="Shoes"
+                  class="rounded-xl"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">Shoes!</h2>
+                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <div class="card-actions">
+                  <button class="btn btn-primary">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- card-4 End -->
+            <!-- card-5 start -->
+            <div class="card w-full bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <img
+                  src="https://placeimg.com/400/225/arch"
+                  alt="Shoes"
+                  class="rounded-xl"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">Shoes!</h2>
+                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <div class="card-actions">
+                  <button class="btn btn-primary">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- card-5 End -->
+            <!-- card-6 start -->
+            <div class="card w-full bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <img
+                  src="https://placeimg.com/400/225/arch"
+                  alt="Shoes"
+                  class="rounded-xl"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">Shoes!</h2>
+                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <div class="card-actions">
+                  <button class="btn btn-primary">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- card-6 End -->
+          </div>
+        </div>
+        <div class="bg-violet-500">Aside</div>
+      </section>
+    </main>
   </body>
 </html>
