addToList function created

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h2 class="card-title">Lionel Messi</h2>
                 <p><small>36 Goals</small> <small>120 Assist</small></p>
                 <div class="card-actions">
-                  <button class="btn btn-primary" onclick="addToList()">
+                  <button class="btn btn-primary" onclick="addToList(this)">
                     Select
                   </button>
                 </div>
