got the player name using onclick in button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h2 class="card-title">Neymar Jr</h2>
                 <p><small>36 Goals</small> <small>120 Assist</small></p>
                 <div class="card-actions">
-                  <button class="btn btn-primary" onclick="addToList()">
+                  <button class="btn btn-primary" onclick="addToList(this)">
                     Select
                   </button>
                 </div>
@@ -91,7 +91,7 @@
                 <h2 class="card-title">Kylian Mbappé</h2>
                 <p><small>36 Goals</small> <small>120 Assist</small></p>
                 <div class="card-actions">
-                  <button class="btn btn-primary" onclick="addToList()">
+                  <button class="btn btn-primary" onclick="addToList(this)">
                     Select
                   </button>
                 </div>
@@ -107,7 +107,7 @@
                 <h2 class="card-title">Vítor Machado</h2>
                 <p><small>36 Goals</small> <small>120 Assist</small></p>
                 <div class="card-actions">
-                  <button class="btn btn-primary" onclick="addToList()">
+                  <button class="btn btn-primary" onclick="addToList(this)">
                     Select
                   </button>
                 </div>
@@ -123,7 +123,7 @@
                 <h2 class="card-title">Sergio Ramos</h2>
                 <p><small>36 Goals</small> <small>120 Assist</small></p>
                 <div class="card-actions">
-                  <button class="btn btn-primary" onclick="addToList()">
+                  <button class="btn btn-primary" onclick="addToList(this)">
                     Select
                   </button>
                 </div>
@@ -139,7 +139,7 @@
                 <h2 class="card-title">Renato Sanches</h2>
                 <p><small>36 Goals</small> <small>120 Assist</small></p>
                 <div class="card-actions">
-                  <button class="btn btn-primary" onclick="addToList()">
+                  <button class="btn btn-primary" onclick="addToList(this)">
                     Select
                   </button>
                 </div>
