--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="bg-violet-500">
           <div class="bg-black m-2">
             <h1 class="text-2xl text-center">Selected V</h1>
-            <ol class="p-5">
+            <ol class="p-5" id="player-list">
               <li>rajib</li>
               <li>nazmul</li>
               <li>chinmoy</li>
