--- a/index.html
+++ b/index.html
@@ -153,13 +153,7 @@
         <div class="bg-violet-500">
           <div class="bg-black m-2">
             <h1 class="text-2xl text-center">Selected V</h1>
-            <ol class="p-5" id="player-list">
-              <li>rajib</li>
-              <li>nazmul</li>
-              <li>chinmoy</li>
-              <li>shamim</li>
-              <li>Arif</li>
-            </ol>
+            <ul class="p-5" id="player-list"></ul>
           </div>
           <div class="bg-black m-2 p-2">
             <h1 class="text-center font-bold text-2xl mt-3">
