player added into order list done

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="bg-violet-500">
           <div class="bg-black m-2">
             <h1 class="text-2xl text-center">Selected V</h1>
-            <ul class="p-5" id="player-list"></ul>
+            <ol class="p-5 list-decimal" id="player-list"></ol>
           </div>
           <div class="bg-black m-2 p-2">
             <h1 class="text-center font-bold text-2xl mt-3">
