--- a/index.html
+++ b/index.html
@@ -166,17 +166,20 @@
                   class="text-black p-1 rounded-md font-semibold"
                   type="text"
                   name=""
-                  id=""
+                  id="per-player-expense"
               /></span>
             </p>
             <div class="text-center">
               <button
+                id="btn-player-cost"
                 class="px-5 py-2 btn-primary mt-3 font-semibold rounded-md"
               >
                 Calculate
               </button>
             </div>
-            <p class="mt-3 text-center">Player Expense:</p>
+            <p class="mt-3 text-center">
+              Player Expense: $<span id="player-expense">00</span>
+            </p>
 
             <p class="mt-3 text-center">
               Manager
@@ -185,7 +188,7 @@
                   class="text-black p-1 rounded-md font-semibold"
                   type="text"
                   name=""
-                  id=""
+                  id="manager-expense"
               /></span>
             </p>
             <p class="mt-3 text-center mr-3">
@@ -195,21 +198,25 @@
                   class="text-black p-1 rounded-md font-semibold"
                   type="text"
                   name=""
-                  id=""
+                  id="coach-expense"
               /></span>
             </p>
             <div class="text-center">
               <button
+                id="btn-total-cost"
                 class="px-5 py-2 btn-primary mt-3 font-semibold rounded-md"
               >
                 Calculate
               </button>
             </div>
-            <p class="mt-3 text-center">Total:</p>
+            <p class="mt-3 text-center">
+              Total:$<span id="player-expense">00</span>
+            </p>
           </div>
         </div>
       </section>
     </main>
     <script src="/js/app.js"></script>
+    <script src="/js/expense.js"></script>
   </body>
 </html>
