--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <span
                 ><input
                   class="text-black p-1 rounded-md font-semibold"
-                  type="text"
+                  type="number"
                   name=""
                   id="per-player-expense"
               /></span>
@@ -210,7 +210,7 @@
               </button>
             </div>
             <p class="mt-3 text-center">
-              Total:$<span id="player-expense">00</span>
+              Total: $<span id="total-expense">00</span>
             </p>
           </div>
         </div>
