--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <span class="ml-3"
                 ><input
                   class="text-black p-1 rounded-md font-semibold"
-                  type="text"
+                  type="number"
                   name=""
                   id="manager-expense"
               /></span>
@@ -196,7 +196,7 @@
               <span class="ml-3"
                 ><input
                   class="text-black p-1 rounded-md font-semibold"
-                  type="text"
+                  type="number"
                   name=""
                   id="coach-expense"
               /></span>
@@ -216,6 +216,7 @@
         </div>
       </section>
     </main>
+    <script src="/js/common.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/expense.js"></script>
   </body>
