added banner class and added footer

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body class="bg-slate-800 text-white">
-    <header>
-      <section class="banner">
-        <div class="banner-msg">
+    <header class="flex justify-center items-center w-full">
+      <section class="flex justify-center items-center w-full banner">
+        <div class="text-center">
           <h1 class="banner-title font-bold text-7xl mb-5">
             Now Your Turn, Choose Your Beloved Player
           </h1>
-          <p class="banner-text">
-            Legends at the Back and pick your favourite player from here!
+
+          <p class="text-white flex-wrap">
+            Legends at the Back, pick your favourite player from here!
           </p>
           <div>
             <img class="mbappe-pic" src="./assets/Mask Group.png" alt="" />
@@ -225,10 +226,9 @@
       class="mt-5 footer footer-center p-10 bg-slate-900 text-white text-base-content rounded"
     >
       <div class="grid grid-flow-col gap-4">
-        <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
       </div>
       <div>
         <div class="grid grid-flow-col gap-4">
