--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
     <header class="flex justify-center items-center w-full">
       <section class="flex justify-center items-center w-full banner">
         <div class="text-center">
-          <h1 class="banner-title font-bold text-7xl mb-5">
+          <h1
+            class="banner-title font-bold text-2xl md:text-4xl lg:text-7xl mb-5 w-8/12 mx-auto"
+          >
             Now Your Turn, Choose Your Beloved Player
           </h1>
 
-          <p class="text-white flex-wrap">
+          <p class="text-white flex-wrap w-8/12 mx-auto">
             Legends at the Back, pick your favourite player from here!
           </p>
           <div>
