--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment-5</title>
+    <title>Choose Your Beloved Player</title>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css"
       rel="stylesheet"
@@ -18,7 +18,7 @@
       <section class="flex justify-center items-center w-full banner">
         <div class="text-center">
           <h1
-            class="banner-title font-bold text-2xl md:text-4xl lg:text-7xl mb-5 w-8/12 mx-auto"
+            class="banner-title font-bold text-2xl md:text-4xl lg:text-5xl mb-5 w-8/12 mx-auto"
           >
             Now Your Turn, Choose Your Beloved Player
           </h1>
@@ -158,19 +158,36 @@
           </div>
         </div>
 
-        <!-- Aside Section -->
-        <div>
-          <div class="bg-black m-2 rounded-md">
-            <h1 class="text-center font-bold text-2xl">Selected-V</h1>
+        <!-- Aside Section Start -->
+        <div class="w-9/12 p-2">
+          <div class="bg-black rounded-md mb-5">
+            <div>
+              <h1 class="text-center font-bold text-2xl w-10/12 mx-auto">
+                Selected-V
+              </h1>
+              <img
+                class="w-3/4 mx-auto"
+                src="/assets/orange-underline.png"
+                alt=""
+              />
+            </div>
+
             <ol class="p-8 list-decimal" id="player-list"></ol>
           </div>
-          <div class="bg-black m-2 p-2 rounded-md">
-            <h1 class="text-center font-bold text-2xl mt-3">Budget</h1>
-            <p class="mt-3 text-center">
+          <div class="bg-black p-2 rounded-md">
+            <div>
+              <h1 class="text-center font-bold text-2xl mt-3">Budget</h1>
+              <img
+                class="w-3/4 mx-auto"
+                src="/assets/orange-underline.png"
+                alt=""
+              />
+            </div>
+            <p class="mt-5 text-center">
               Per Player
               <span
                 ><input
-                  class="text-black p-1 rounded-md font-semibold"
+                  class="text-black p-1 ml-1 rounded-md font-semibold w-2/4"
                   type="number"
                   name=""
                   id="per-player-expense"
@@ -179,30 +196,30 @@
             <div class="text-center">
               <button
                 id="btn-player-cost"
-                class="px-5 py-2 btn-primary mt-3 font-semibold rounded-md"
+                class="px-5 py-2 btn-primary mt-5 font-semibold rounded-md"
               >
                 Calculate
               </button>
             </div>
-            <p class="mt-3 text-center font-bold">
+            <p class="mt-5 text-center font-semibold">
               Player Expense: $<span id="player-expense">00</span>
             </p>
 
-            <p class="mt-3 text-center">
+            <p class="mt-5 text-center">
               Manager
               <span class="ml-3"
                 ><input
-                  class="text-black p-1 rounded-md font-semibold"
+                  class="text-black p-1 rounded-md font-semibold w-2/4"
                   type="number"
                   name=""
                   id="manager-expense"
               /></span>
             </p>
-            <p class="mt-3 text-center mr-3">
+            <p class="mt-5 text-center">
               Coach
-              <span class="ml-3"
+              <span class="ml-7"
                 ><input
-                  class="text-black p-1 rounded-md font-semibold"
+                  class="text-black p-1 rounded-md font-semibold w-2/4"
                   type="number"
                   name=""
                   id="coach-expense"
@@ -211,17 +228,18 @@
             <div class="text-center">
               <button
                 id="btn-total-cost"
-                class="px-5 py-2 btn-primary mt-3 font-semibold rounded-md"
+                class="px-5 py-2 btn-primary mt-5 font-semibold rounded-md"
               >
                 Calculate
               </button>
             </div>
-            <p class="mt-3 text-center font-bold">
+            <p class="mt-5 mb-5 text-center font-bold">
               Total: <span class="text-orange-600">$</span
               ><span id="total-expense" class="text-orange-600">00</span>
             </p>
           </div>
         </div>
+        <!-- Aside Section Finish -->
       </section>
     </main>
     <footer
