added new 3 card

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">Lionel Messi</h2>
-                <p><small>36 Goals</small> <small>120 Assist</small></p>
+                <p><small>100 Goals</small> <small>120 Assist</small></p>
                 <div class="card-actions">
                   <button class="btn btn-primary" onclick="addToList(this)">
                     Select
@@ -82,7 +82,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">Neymar Jr</h2>
-                <p><small>36 Goals</small> <small>120 Assist</small></p>
+                <p><small>90 Goals</small> <small>110 Assist</small></p>
                 <div class="card-actions">
                   <button class="btn btn-primary" onclick="addToList(this)">
                     Select
@@ -98,7 +98,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">Kylian Mbappé</h2>
-                <p><small>36 Goals</small> <small>120 Assist</small></p>
+                <p><small>80 Goals</small> <small>100 Assist</small></p>
                 <div class="card-actions">
                   <button class="btn btn-primary" onclick="addToList(this)">
                     Select
@@ -114,7 +114,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">Vítor Machado</h2>
-                <p><small>36 Goals</small> <small>120 Assist</small></p>
+                <p><small>75 Goals</small> <small>95 Assist</small></p>
                 <div class="card-actions">
                   <button class="btn btn-primary" onclick="addToList(this)">
                     Select
@@ -130,7 +130,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">Sergio Ramos</h2>
-                <p><small>36 Goals</small> <small>120 Assist</small></p>
+                <p><small>70 Goals</small> <small>90 Assist</small></p>
                 <div class="card-actions">
                   <button class="btn btn-primary" onclick="addToList(this)">
                     Select
@@ -146,7 +146,7 @@
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">Renato Sanches</h2>
-                <p><small>36 Goals</small> <small>120 Assist</small></p>
+                <p><small>65 Goals</small> <small>90 Assist</small></p>
                 <div class="card-actions">
                   <button class="btn btn-primary" onclick="addToList(this)">
                     Select
@@ -155,6 +155,54 @@
               </div>
             </div>
             <!-- card-6 End -->
+            <!-- card-7 start -->
+            <div class="card w-full bg-black shadow-xl">
+              <figure class="">
+                <img src="/assets/card-7.jpg" alt="Shoes" class="w-full h-56" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">Dani Alves</h2>
+                <p><small>60 Goals</small> <small>70 Assist</small></p>
+                <div class="card-actions">
+                  <button class="btn btn-primary" onclick="addToList(this)">
+                    Select
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- card-7 End -->
+            <!-- card-8 start -->
+            <div class="card w-full bg-black shadow-xl">
+              <figure class="">
+                <img src="/assets/card-8.jpg" alt="Shoes" class="w-full h-56" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">Gabriel Jesus</h2>
+                <p><small>58 Goals</small> <small>80 Assist</small></p>
+                <div class="card-actions">
+                  <button class="btn btn-primary" onclick="addToList(this)">
+                    Select
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- card-8 End -->
+            <!-- card-9 start -->
+            <div class="card w-full bg-black shadow-xl">
+              <figure class="">
+                <img src="/assets/card-9.jpg" alt="Shoes" class="w-full h-56" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">Hulk</h2>
+                <p><small>50 Goals</small> <small>50 Assist</small></p>
+                <div class="card-actions">
+                  <button class="btn btn-primary" onclick="addToList(this)">
+                    Select
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- card-9 End -->
           </div>
         </div>
 
@@ -230,7 +278,7 @@
                 id="btn-total-cost"
                 class="px-5 py-2 btn-primary mt-5 font-semibold rounded-md"
               >
-                Calculate
+                Calculate Total
               </button>
             </div>
             <p class="mt-5 mb-5 text-center font-bold">
@@ -243,7 +291,7 @@
       </section>
     </main>
     <footer
-      class="mt-5 footer footer-center p-10 bg-slate-900 text-white text-base-content rounded"
+      class="mt-16 footer footer-center p-10 bg-slate-900 text-white text-base-content rounded"
     >
       <div class="grid grid-flow-col gap-4">
         <a class="link link-hover">Terms of use</a>
